# EVETradeAnalyzer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
evetradeanalyzer/: asgi.py  settings.py  urls.py  wsgi.py
evetradeanalyzer/templates/: base.html
evetradeanalyzer/templates/trade_analysis/: in_jita.html  in_station.html  index.html  station_to_station.html
evetradeanalyzer/trade_analysis/: apps.py  models.py  urls.py  utils.py  views.py
evetradeanalyzer/trade_analysis/management/commands/: eve_fetch_data.py  process_tasks.py  update_item_names.py
evetradeanalyzer/trade_analysis/migrations/: 0001_initial.py  0002_alter_item_name_alter_marketorder_is_buy_order_and_more.py  0003_profitabledeal.py  0004_alter_profitabledeal_profit_percent.py  0005_marketorder_issued.py  0006_alter_marketorder_issued.py  0007_profitabledeal_updated_at.py
update_item_names/: apps.py
